Refactoring generator Class